name:                Minesweeper
version:             1.1.0.0
synopsis:            Haskell Minesweeper
-- description:         
license:             GPL-3
license-file:        LICENSE
author:              Jeremy Nuttall
maintainer:          jtnuttal@usc.edu
-- copyright:           
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable Minesweeper
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.8 && <4.9
                       , array >=0.5 && <0.6
                       , vector >=0.11 && <0.12
                       , random >=1.1 && <1.2
                       , gtk3 >=0.14 && <0.15
                       , text >=1.2 && <1.3
                       , containers >=0.5 && <0.6
  -- Deployment
  -- ghc-options: -O2 -Wall -threaded -fno-warn-unused-do-bind -with-rtsopts=-N

  -- For profiling
  ghc-options: -O2 -Wall -threaded -fno-warn-unused-do-bind -fprof-auto "-with-rtsopts=-N2 -p -s -h -i0.1" -prof
  -- hs-source-dirs:      
  default-language:    Haskell2010
